--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.22",
     "expo-status-bar": "~3.0.9",
+    "expo-vector-icons": "^10.0.1",
     "nativewind": "latest",
-    "react": "19.1.0",
+    "react": "19.2.3",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
