--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "expo-status-bar": "~3.0.9",
     "expo-vector-icons": "^10.0.1",
     "nativewind": "latest",
-    "react": "19.1.0",
+    "react": "19.2.4",
+    "react-dom": "^19.2.4",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
