--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^54.0.0",
+    "expo": "^54.0.33",
     "expo-constants": "~18.0.13",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.22",
+    "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
     "expo-vector-icons": "^10.0.1",
     "nativewind": "latest",
-    "react": "19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
